--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,8 @@ pip-tools==6.3.0
     # via -r requirements.in
 pluggy==1.0.0
     # via pytest
+psutil==5.8.0
+    # via -r requirements.in
 py==1.10.0
     # via pytest
 pyparsing==2.4.7
