--- a/requirements.txt
+++ b/requirements.txt
@@ -6,49 +6,59 @@
 #
 aiounittest==1.4.1
     # via -r requirements.in
-asgiref==3.4.1
+asgiref==3.5.0
     # via django
-attrs==21.2.0
+attrs==21.4.0
     # via pytest
-click==8.0.3
+click==8.0.4
     # via pip-tools
-coverage==6.2
+coverage==6.3.2
     # via -r requirements.in
-django==3.2.9
+django==3.2.12
+    # via -r requirements.in
+flake8==4.0.1
     # via -r requirements.in
 iniconfig==1.1.1
     # via pytest
+lxml==4.8.0
+    # via unittest-xml-reporting
+mccabe==0.6.1
+    # via flake8
 packaging==21.3
     # via pytest
 pep517==0.12.0
     # via pip-tools
-pip-tools==6.4.0
+pip-tools==6.5.1
     # via -r requirements.in
 pluggy==1.0.0
     # via pytest
-psutil==5.8.0
+psutil==5.9.0
     # via -r requirements.in
 py==1.11.0
     # via pytest
-pyparsing==3.0.6
+pycodestyle==2.8.0
+    # via flake8
+pyflakes==2.4.0
+    # via flake8
+pyparsing==3.0.7
     # via packaging
-pytest==6.2.5
+pytest==7.1.0
     # via -r requirements.in
 pytz==2021.3
     # via django
 sqlparse==0.4.2
     # via django
-toml==0.10.2
-    # via pytest
-tomli==1.2.2
-    # via pep517
-unittest-xml-reporting==3.0.4
+tomli==2.0.1
+    # via
+    #   pep517
+    #   pytest
+unittest-xml-reporting==3.2.0
     # via -r requirements.in
 websockets==9.1
     # via -r requirements.in
-wheel==0.37.0
+wheel==0.37.1
     # via pip-tools
-wrapt==1.13.3
+wrapt==1.14.0
     # via aiounittest
 
 # The following packages are considered to be unsafe in a requirements file:
