--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ default:
   before_script:
     - apt -y update
     - apt -y install apt-utils
-    - apt -y install net-tools python3.8 python3-pip
+    - apt -y install net-tools python3.8 python3-pip python3-venv
     - apt -y upgrade
 
 
