--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,13 +13,9 @@ default:
 python-tests:
   stage: test
   script:
-    - python3 -m venv ./utils/bundle/tests/test_bundle/venv/
+    - python3 -m venv ./venv/
+    - . venv/bin/activate
     - pip3 install -r requirements.txt
-    - ls -la /builds/CAS-eResearch/GWDC/code/gwcloud_job_client/utils/bundle/
-    - ls -la /builds/CAS-eResearch/GWDC/code/gwcloud_job_client/utils/bundle/tests/
-    - ls -la /builds/CAS-eResearch/GWDC/code/gwcloud_job_client/utils/bundle/tests/test_bundle/
-    - ls -la /builds/CAS-eResearch/GWDC/code/gwcloud_job_client/utils/bundle/tests/test_bundle/venv/
-    - ls -la /builds/CAS-eResearch/GWDC/code/gwcloud_job_client/utils/bundle/tests/test_bundle/venv/bin/
     - coverage run -m xmlrunner discover --output-file ./junit.xml
     - coverage xml
 
