--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,6 +16,7 @@ python-tests:
     - python3 -m venv ./venv/
     - . venv/bin/activate
     - pip3 install -r requirements.txt
+    - python db/manage.py migrate
     - coverage run -m xmlrunner discover --output-file ./junit.xml
     - coverage xml
 
