--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,12 +16,15 @@ python-tests:
     - python3 -m venv ./venv/
     - . venv/bin/activate
     - pip3 install -r requirements.txt
+    - python db/manage.py migrate
     - coverage run -m xmlrunner discover --output-file ./junit.xml
     - coverage xml
 
   artifacts:
     reports:
-      cobertura: coverage.xml
+      coverage_report:
+        coverage_format: cobertura
+        path: coverage.xml
       junit: junit.xml
 
 
