--- a/requirements.txt
+++ b/requirements.txt
@@ -4,52 +4,81 @@
 #
 #    pip-compile requirements.in
 #
-aiounittest==1.4.1
+aiohttp==3.8.1
+    # via aiohttp-xmlrpc
+aiohttp-xmlrpc==1.5.0
     # via -r requirements.in
-asgiref==3.5.0
+aiosignal==1.2.0
+    # via aiohttp
+aiounittest==1.4.2
+    # via -r requirements.in
+asgiref==3.5.2
     # via django
-attrs==21.4.0
-    # via pytest
-click==8.0.4
+async-timeout==4.0.2
+    # via aiohttp
+attrs==22.1.0
+    # via
+    #   aiohttp
+    #   pytest
+build==0.8.0
     # via pip-tools
-coverage==6.3.2
+charset-normalizer==2.1.0
+    # via aiohttp
+click==8.1.3
+    # via pip-tools
+coverage==6.4.4
     # via -r requirements.in
-django==3.2.12
+django==3.2.15
     # via -r requirements.in
-flake8==4.0.1
+flake8==5.0.4
     # via -r requirements.in
+frozenlist==1.3.1
+    # via
+    #   aiohttp
+    #   aiosignal
+idna==3.3
+    # via yarl
 iniconfig==1.1.1
     # via pytest
-lxml==4.8.0
-    # via unittest-xml-reporting
-mccabe==0.6.1
+lxml==4.9.1
+    # via
+    #   aiohttp-xmlrpc
+    #   unittest-xml-reporting
+mccabe==0.7.0
     # via flake8
+multidict==6.0.2
+    # via
+    #   aiohttp
+    #   yarl
 packaging==21.3
-    # via pytest
-pep517==0.12.0
-    # via pip-tools
-pip-tools==6.5.1
+    # via
+    #   build
+    #   pytest
+pep517==0.13.0
+    # via build
+pip-tools==6.8.0
     # via -r requirements.in
 pluggy==1.0.0
     # via pytest
-psutil==5.9.0
+psutil==5.9.1
     # via -r requirements.in
 py==1.11.0
     # via pytest
-pycodestyle==2.8.0
+pycodestyle==2.9.1
     # via flake8
-pyflakes==2.4.0
+pyflakes==2.5.0
     # via flake8
-pyparsing==3.0.7
+pyparsing==3.0.9
     # via packaging
-pytest==7.1.0
+pytest==7.1.2
     # via -r requirements.in
-pytz==2021.3
+pytz==2022.2.1
     # via django
 sqlparse==0.4.2
     # via django
 tomli==2.0.1
     # via
+    #   build
     #   pep517
     #   pytest
 unittest-xml-reporting==3.2.0
@@ -58,8 +87,10 @@ websockets==9.1
     # via -r requirements.in
 wheel==0.37.1
     # via pip-tools
-wrapt==1.14.0
+wrapt==1.14.1
     # via aiounittest
+yarl==1.8.1
+    # via aiohttp
 
 # The following packages are considered to be unsafe in a requirements file:
 # pip
